# neurosim

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
data/: disorder_taxonomy.json
docs/superpowers/plans/: 2026-03-29-neurosim.md
docs/superpowers/specs/: 2026-03-29-neurosim-design.md
src/neurosim/: app.py  auth.py  diagnosis.py  disorders.py  llm_client.py  prompts.py  session.py
static/: app.js  index.html  style.css
tests/: test_app.py  test_auth.py  test_diagnosis.py  test_disorders.py  test_prompts.py  test_session.py
